# rdk-libSyscallWrapper

./: CONTRIBUTING.md  Makefile.am  NOTICE  README.md  build.sh  configure.ac  rdk_build.sh  rdk_env.xml
source/: Makefile.am  secure_popen_wrapper.c  secure_system_wrapper.c  secure_utils.c  secure_wrapper.c  secure_wrapper.h
testapp/: Makefile.am  test_secure_wrapper.c
